# .dotfiles

./: .gitignore  .nixus.toml  .sops.yaml  1.txt  2.txt  <S-F1>  LICENSE  README.md  TODO.md  \  authorized_keys  boot.loader.efi.canTouchEfiVariables  c.nix  cache-pub-key.pem  ch.nix  dock.plist  fif.sh  flake.bak.nix  flake.nix  flake.nix.bak  flake.toml  install.bat  install.sh  keyring.yaml  on  develop [$✘»+⇡]  out.txt  playbook-old.yml  playbook.yml  result  roadmap.toml  setup.bat  setup.ps1  setup.sh  shell-old.nix  t  t.sh  test.sh  test.txt  tmp.sh  txt.txt  (+1 more)
.config/: pre-commit-config.yaml
ansible/: combined_output.txt  main.yml
config/: default.nix  pre-commit-config.yaml
myconfig/: cert.pem  config.xml  key.pem
nix/: asd.sh  flake-old.nix  flake.nix  network.nix  result  utils.nix
nix/apps/nixus/: Cargo.toml  default.nix  flake.nix
nix/apps/nixus/src/: config.rs  main.rs  utils.rs
nix/apps/nixus/src/agenix/: main.rs
nix/apps/nixus/src/agenix/dialogs/: key_storage.rs  mod.rs  write_confirmation.rs
nix/apps/nixus/src/agenix/usb/: detection.rs  device.rs  mod.rs
nix/apps/nixus/src/cli/: android.rs  cachix.rs  darwin.rs  home.rs  mod.rs  nixos.rs  secrets.rs  ssh_keys.rs  styles.rs
nix/apps/nixus/src/cli/ssh_keys/: mod.rs  ssh_key_manager.rs
nix/apps/nixus/src/dialogs/: write_confirmation.rs
nix/apps/nixus/src/styles/: mod.rs
nix/apps/nixus/src/styles/adapters/: output.rs
nix/apps/nixus/src/styles/adapters/input/: material.rs
nix/apps/nixus/src/styles/theme/: color.rs  mod.rs
nix/apps/nixus/src/styles/themes/: material_deep_ocean.toml
nix/apps/nixus/src/usb/: detection.rs  device.rs  mod.rs
nixus/: flake.nix
notes/: README.md  error-archive.md  lol.md  nix-darwin.md  nix-os.md  nix-rust.md  nvim.md  qemu.md  reference-configs.md  security.md  todo.md  useful.md  vim.md  wireguard.md
playbooks/: install.yml  update.yml
scripts/: apply_header.sh  clipboard_register.sh  drive-evaluator.nix  drive_evaluator.sh  drive_evaluator2.sh  flash_tails.sh  font.sh  header_template.txt  home_manager_switch.sh  install.bat  install.sh  install_nix_on_nas.sh  install_tailscale_nas_ex2.sh  macos_config_backup.sh  play_sound.sh  print_hosts.sh  qemu.sh  recover_driver.sh  run_remote.sh  screengrab.sh  scripts.sh  setup.bat  setup.sh  taildrop.ps1  (+7 more)
(+690 files in other folders)
