[package]
name = "nixus"
version = "0.1.0"
edition = "2021"

[dependencies]
#rusb = "0.9.4"
#dialoguer = "0.11.0"
#console = "0.15.8"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
spinners = "4.1.1"
clap = { version = "4.5.17" , features = ["color", "suggestions", "wrap_help", "derive"] }
colored = "2.1.0"
toml = "0.8.19"
dirs = "5.0.1"
tempfile = "3.12.0"
snafu = "0.8.4"
hostname = "0.4.0"