[package]
name = "nixus"
version = "0.1.0"
edition = "2021"

[features]
default = ["common"]
linux-aarch64 = []
linux-x86_64 = []

aarch64-darwin = []
x86_64-darwin = []

aarch64-linux = []
armv7-linux = []
armv8-linux = []
x86_64-linux = []
linux = ["linux-aarch64", "linux-x86_64"]
darwin = ["aarch64-darwin", "x86_64-darwin"]
android = ["aarch64-linux", "armv7-linux", "armv8-linux", "x86_64-linux"]
supported = ["linux", "darwin", "android"]
common = []

[dependencies]
#rusb = "0.9.4"
#dialoguer = "0.11.0"
#console = "0.15.8"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
spinners = "4.1.1"
clap = { version = "4.5.17", features = [
  "color",
  "suggestions",
  "wrap_help",
  "derive",
] }
colored = "2.1.0"
toml = "0.8.19"
dirs = "5.0.1"
tempfile = "3.12.0"
snafu = "0.8.4"
hostname = "0.4.0"
anstyle = "1.0.8"
clap_complete = "4.5.1"
clap_complete_nushell = "4.5.1"
env_logger = { version = "0.11.5", features = ["color", "default"] }
log = "0.4.22"
which = "6.0.3"
chrono = "0.4.38"
serde_yaml = "0.9.34"
whoami = "1.5.2"
